# backend/test_api.openapi.json
@@ -358,10 +358,79 @@
           }
         }
       }
+    },
+    "/gadgets/{gadget_id}/attachments": {
+      "post": {
+        "tags": [
+          "gadgets"
+        ],
+        "summary": "Upload Attachment",
+        "operationId": "upload_attachment_gadgets__gadget_id__attachments_post",
+        "parameters": [
+          {
+            "name": "gadget_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Gadget Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_upload_attachment_gadgets__gadget_id__attachments_post"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "Body_upload_attachment_gadgets__gadget_id__attachments_post": {
+        "properties": {
+          "file": {
+            "type": "string",
+            "contentMediaType": "application/octet-stream",
+            "title": "File"
+          },
+          "label": {
+            "type": "string",
+            "title": "Label"
+          }
+        },
+        "type": "object",
+        "required": [
+          "file",
+          "label"
+        ],
+        "title": "Body_upload_attachment_gadgets__gadget_id__attachments_post"
+      },
       "ErrorCodeEnum": {
         "type": "string",
         "enum": [
